added new pages, splitted startup scripts, added nwaf config to exclude /nonwaf, needs testing

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,13 @@
-Input user name to get user email:
-<form method="POST">
-    <input name="text">
-    <input type="submit">
-</form>
-{{ result }}
-
+<h3>Please choose a page to test SQL injection with our without Nemesida WAF</h3>
+<h3>Without Nemesida WAF</h3>
+<a href=/nonwaf/1>Simple SQL injection test</a><br>
+<a href=/nonwaf/2>Get DB entries count, entire DB, DB tables</a><br>
+<a href=/nonwaf/3>Get auth_inf table comlumns</a><br>
+<a href=/nonwaf/4>Get administrator password</a><br>
+<a href=/nonwaf/5>XSS attack</a><br>
+<h3>With Nemesida WAF</h3>
+<a href=/nwaf/1>Simple SQL injection test</a><br>
+<a href=/nwaf/2>Get DB entries count, entire DB, DB tables</a><br>
+<a href=/nwaf/3>Get auth_inf table comlumns</a><br>
+<a href=/nwaf/4>Get administrator password</a><br>
+<a href=/nwaf/5>XSS attack</a><br>
