--- a/templates/4.html
+++ b/templates/4.html
@@ -1,6 +1,6 @@
 <a href=/>Index</a><br>
 <h3>Get administrator password</h3>
-To get administrator password, enter administrator' union select null,null, passwd from auth_inf where user_id = 1<br>
+To get administrator password, enter administrator' union select passwd from auth_inf where user_id = 1 -- -<br>
 Enter user name to get user email:<br>
 <form method="POST">
     <input name="text">
